<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#48453f"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>



            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>




            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/qstn_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>






        </LinearLayout>
    </ScrollView>

</LinearLayout>